--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  background: linear-gradient(20deg, #E8DD3F 50%,#000 50%);
+}
+
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-family: 'Oxygen', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body,
+div,
+main,
+fieldset,
+h1,
+form,
+input,
+label,
+ul,
+li,
+button {
+  margin: 0 0;
+  padding: 0 0;
+}
+
+
+h1 {
+  font-size: 1.8em;
+  margin: .5em 0;
+}
+
+h1,
+fieldset {
+  text-transform: uppercase;
+}
+
+input {
+  border: none;
+  border-bottom: 1px solid #000;
+}
+
+fieldset {
+  border: none;
 }
